# SCUBA-legacy

./: LICENSE.txt  README.md
data/abacus2/: NOTICE
demos/: README
demos/SD_with_RMSD_restraint/: README  RunDemo.sh  cleanup.sh  sdwithrmsdrestraint.in  sdwithrmsdrestraint.in.uncommented
demos/buildbackbone/: README  RunDemo.sh  cleanup.sh  sketch_definition.txt
demos/optimizebackbone/: README  RunDemo.sh  SDINPUT.template  cleanup.sh  sd1-1.in.uncommented  sd1-2.in.uncommented  sd2-1.in.uncommented  sd2-2.in.uncommented  sd2-3.in.uncommented
demos/reoptimizeloop/: README  RunDemo.sh  assemble-loops.sh  exploreloop-1.in  exploreloop-1.in.comments  exploreloop-1.sh  exploreloop-2.in  exploreloop-2.sh  exploreloop-3.in  exploreloop-3.sh  exploreloop-4.in  exploreloop-4.sh  exploreloop-5.in  exploreloop-5.sh
demos/selectsequence/: README  RelaxBackboneDemo.sh  SelectSequenceDemo.sh  abacus.param_ref1  abacus.param_ref2  abacus.param_ref3  abacus.param_shrinkSC  cleanup.sh  design.seq  sdrelax1.in  sdrelax2.in
src/: .gitignore  CMakeLists.txt
src/backbone/test/: CMakeLists.txt  testbuildbackbone.cpp
src/dataio/: datapaths.h
src/dataio/src/: datapaths.cpp  inputlines.cpp
src/designseq/: AADesignTemplate.h  AAProbabilityArray.h  AAScoreMatrix.h  AASequence.h  Angles.h  AtomLib.h  AtomProperty.h  AtomicEnergyCalcular.h  CmdArgs.h  Conformer.h  DesignParameters.h  DesignTemplate.h  EnergyArray.h  EnergyMatrix.h  PackingAnalysis.h  PackingTemplate.h  ProteinRep.h  ResName.h  Rotamer.h  RotamerEnergyBBDep.h  RotamerGroup.h  RotamerLib.h  S1EnergyTable.h  S2MatrixFinder.h  SasaPSD.h  ScoringTemplate.h  SeqMinimize.h  SeqProfile.h  SingleSitePackingTemplate.h  StructureInfo.h
src/designseq/src/: AADesignTemplate.cpp  AAProbabilityArray.cpp  AAScoreMatrix.cpp  AASequence.cpp  Angles.cpp  AtomLib.cpp  AtomProperty.cpp  AtomicEnergyCalcular.cpp  CMakeLists.txt  Conformer.cpp  DesignParameters.cpp  DesignTemplate.cpp  EnergyArray.cpp  EnergyMatrix.cpp  PackingAnalysis.cpp  PackingTemplate.cpp  ProteinRep.cpp  ResName.cpp  Rotamer.cpp  RotamerEnergyBBDep.cpp  RotamerGroup.cpp  RotamerLib.cpp  S1EnergyTable.cpp  S2MatrixFinder.cpp  SasaPSD.cpp  ScoringTemplate.cpp  SeqMinimize.cpp  SeqProfile.cpp  SingleSitePackingTemplate.cpp  StringTool.cpp  StructureInfo.cpp
src/designseq/test/: CMakeLists.txt  TestDesignSeq.cpp  TestScoring.cpp
src/dstl/: mapkeyint.h  nrdtopn.h
src/dstl/src/: pca.cpp
src/fullsite/: contacts.h  fullsite.h  pairgeometrylib.h  scoresideconf.h  structplus.h
src/fullsite/src/: CMakeLists.txt  contacts.cpp  fullsite.cpp  pairgeometrylib.cpp  scoresideconf.cpp  structplus.cpp
src/geometry/: calculators.h  quatfit.h  xyz.h
src/geometry/src/: calculators.cpp  quatfit.cpp
src/loopclosure/: loopclosure.h  loopsolver.h
src/loopclosure/src/: CMakeLists.txt  loopsolver.cpp  sturm.cpp  tripepclosure.cpp
src/pdbstatistics/: cbpairs.h  nn_pepscorer.h  pbtetrabase.h  phipsidistr.h  proteinblock.h  scoresitepair.h  sselements.h  tetrabase.h  virtualsidechain.h
src/pdbstatistics/src/: CMakeLists.txt  nn_pepscorer.cpp  pbtetrabase.cpp  phipsidistr.cpp  proteinblock.cpp  scoresitepair.cpp  sselements.cpp  tetrabase.cpp  virtualsidechain.cpp
src/proteinrep/: pdbreader.h  pdbrecord.h
src/proteinrep/src/: aaconformer.cpp  pdbreader.cpp  pdbrecord.cpp
src/sd/: activeselections.h  anlytsasa.h  backboneff.h  bsinchain.h  cbpairene.h  emrun.h  enefunc1d.h  forcefield.h  gasdcontrol.h  genchain.h  localhbterm.h  loopexplorationio.h  loopmodeller.h  nnterm.h  restraints.h  sdparam.h  sdrun.h  segenefilter.h  shadowterm.h  shakebonds.h  sidechainff.h  ssrestraint.h  stochasticdynamics.h  trajio.h
src/sd/src/: CMakeLists.txt  activeselections.cpp  anlytsasa.cpp  bsinchain.cpp  cbpairene.cpp  emrun.cpp  forcefield.cpp  forcefield_omp.cpp  gasdcontrol.cpp  genchain.cpp  loopexplorationio.cpp  nnterm.cpp  restraints.cpp  sdparam.cpp  sdrun.cpp  shadowterm.cpp  shakebonds.cpp  sidechainff.cpp  ssrestraint.cpp  stochasticdynamics.cpp
src/sd/test/: CMakeLists.txt  getenergytrajs.cpp  processloopexplorationresult.cpp  testchainsd.cpp  testconfiguresdparam.cpp  testexploreloops.cpp  traj2pdbs.cpp
