add_library(nspdesignseq 
AADesignTemplate.cpp
AAProbabilityArray.cpp
AAScoreMatrix.cpp 
AASequence.cpp
Angles.cpp
AtomicEnergyCalcular.cpp
AtomLib.cpp 
AtomProperty.cpp
CmdArgs.cpp 
Conformer.cpp
DesignParameters.cpp
DesignTemplate.cpp
EnergyArray.cpp 
EnergyMatrix.cpp 
ProteinRep.cpp 
ResName.cpp 
Rotamer.cpp 
RotamerEnergyBBDep.cpp 
RotamerGroup.cpp 
RotamerLib.cpp 
S1EnergyTable.cpp 
S2MatrixFinder.cpp 
SasaPSD.cpp 
ScoringTemplate.cpp
SeqMinimize.cpp
SeqProfile.cpp
SingleSitePackingTemplate.cpp
StringTool.cpp 
StructureInfo.cpp
PackingTemplate.cpp
PackingAnalysis.cpp)