SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
SET(BUILD_SHARED_LIBS OFF)
SET(CMAKE_EXE_LINKER_FLAGS "-static")
link_directories(${PROJECT_BINARY_DIR}/lib)
link_directories(/usr/local/lib)
link_directories(/usr/local/lib64)
link_directories(/usr/lib)
link_directories(/usr/lib64)
add_executable(SCUBA-RunSD testchainsd.cpp)
target_link_libraries (SCUBA-RunSD loop lapacke lapack blas gfortran quadmath boost_filesystem boost_system)
add_executable(SCUBA-Configure testconfiguresdparam.cpp)
target_link_libraries (SCUBA-Configure loop)
add_executable (traj2pdbs traj2pdbs.cpp)
target_link_libraries (traj2pdbs loop lapacke lapack blas gfortran quadmath boost_filesystem boost_system)
add_executable (getenergytrajs getenergytrajs.cpp)
target_link_libraries (getenergytrajs loop lapacke lapack blas gfortran quadmath boost_filesystem boost_system)
add_executable(exploreloops testexploreloops.cpp)
target_link_libraries(exploreloops loop lapacke lapack blas gfortran quadmath boost_filesystem boost_system)
add_executable(processloopexplorationresult processloopexplorationresult.cpp)
target_link_libraries(processloopexplorationresult loop boost_filesystem boost_system)